US212678-bug-layout-fix-band removed flex and grid placeholder, this allows the layout to stack and not overlap on the browsers that don't support shadow dom

--- a/elements/pfe-band/src/pfe-band.scss
+++ b/elements/pfe-band/src/pfe-band.scss
@@ -2,19 +2,6 @@
 
 $LOCAL: band;
 
-%flex-fallback {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-}
-
-// %grid-layout {
-//   display: grid;
-//   grid-row-gap: #{pfe-local(gutter--vertical)};
-//   grid-column-gap: #{pfe-local(gutter--horizontal)};
-//   margin-bottom: 0;
-// }
-
 :host {
   display: block;
 
@@ -68,8 +55,6 @@ $LOCAL: band;
 
   // Wrapper sets padding and background visuals
   position: relative;
-  //Flex commented out/////////////
-  // @extend %flex-fallback;
 
   // Padding
   padding: calc(#{pfe-local(Padding--vertical)} / 2)  #{pfe-local(Padding--horizontal)};
@@ -281,11 +266,9 @@ $LOCAL: band;
     margin:    0 auto;
     width: 100%;
     max-width: #{pfe-local(Width)};
-    // @extend %flex-fallback;
 
     // Grid support styles
     @supports (display: grid) and ( not (display:-ms-grid) ) {
-      // @extend %grid-layout;
       display: grid;
       grid-row-gap: #{pfe-local(gutter--vertical)};
       grid-column-gap: #{pfe-local(gutter--horizontal)};
@@ -294,17 +277,13 @@ $LOCAL: band;
       grid-template-rows:    max-content;
     }
 }
+
   // For each section in the band layout
   @each $section in (header, body, aside, footer) {
-       border: 3px solid red;
-       @extend %flex-fallback; // Add the flex fallback styles
-       //Edge isn't reading into this because it's in the shadow dom
     &__#{$section} { // i.e., pfe-band__header
-         border: 10px solid green;
       margin-bottom: #{pfe-local(gutter--vertical)};
       // Apply the standard grid
       @supports (display: grid) {
-          // @extend %grid-layout;
           display: grid;
           grid-row-gap: #{pfe-local(gutter--vertical)};
           grid-column-gap: #{pfe-local(gutter--horizontal)};
